--- a/src/app/notebook-page/notebook-page.component.html
+++ b/src/app/notebook-page/notebook-page.component.html
@@ -20,8 +20,8 @@
     <div class="row" style="margin-top: 20px;">
       <div class="col-md-10 offset-md-2 col-xs-12">
         <p class="text-md-left">
-          <a [routerLink]="['/pages', this.id]" class="btn btn-primary" (click)="previous()">Previous</a>
-          <a [routerLink]="['/pages', this.id]" class="btn btn-primary" (click)="next()">Next</a>
+          <a *ngIf="this.id > 0" [routerLink]="['/pages', this.id]" class="btn btn-primary" (click)="previous()">Previous</a>
+          <a *ngIf="this.id <=5" [routerLink]="['/pages', this.id]" class="btn btn-primary" (click)="next()">Next</a>
         </p>
       </div>
     </div>
